--- a/README.rdoc
+++ b/README.rdoc
@@ -5,7 +5,7 @@ Description goes here.
 == Note on Patches/Pull Requests
  
 * Fork the project.
-* Make your feature addition or bug fix.
+* Make your feature addition or bug 
 * Add tests for it. This is important so I don't break it in a
   future version unintentionally.
 * Commit, do not mess with rakefile, version, or history.
